--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,136 +1,83 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-* {
-    margin: 0;
-    padding: 0;
-    border: none;
-}
+/*--------------------------------------------Colors*/
 
-/*--------------------------colors */
 .bg-color-name-title {
     background-color: #676767;
 }
 
-.ui-menu-item-home {
-    background-color: #e67e22;
-}
-
-.bg-color-work-history {
-    background-color: #9b59b6;
-}
-
-.ui-menu-item-resume {
-    background-color: #9b59b6;
-}
-
-.ui-menu-item-contact {
-    background-color: #3498db;
-}
-
-.ui-menu-item-download {
-    background-color: #525252;
-}
-
-.bg-color-contact {
-    background-color: #fff;
-}
-
-.big-col-three-reasons {
-    background-color: #fff;
+.bg-color-three-reasons {
+    background-color: #ffffff;
 }
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
 }
 
-/*--------------------------heading */
-header {
-    margin: 0;
+.bg-color-skills {
+    background-color: #ffffff;
 }
 
-.heading {
-    margin-left: 50px;
+.bg-color-work-history {
+    background-color: #9b59b6;
 }
 
-.logo {
-    background: url(../images/rosie.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 360px;
-    transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
+.bg-color-contact {
+    background-color: #ffffff;
 }
 
-.name {
-    font-family: "Exo" sans-serif;
-    font-weight: 100;
-    font-size: 46px;
-    margin-top: 50px;
-    color: #fff;
+.bg-color-conferences {
+    background-color: #f4f4f4;
 }
 
-.title {
-    font-family: "roboto" sans-serif;
-    font-weight: 200px;
-    font-size: 28px;
-    margin-top: 20px;
-    margin-bottom: 90px;
-    color: #fff;
+.bg-color-groups {
+    background-color: #ffffff;
 }
 
-.list-inline-item:not(:last-child) {
-    margin: 0;
+.ui-menu-color-home {
+    background-color: #e67e22;
 }
 
-.menucontainer {
-    font-size: 0;
+.ui-menu-color-resume {
+    background-color: #9b59b6;
 }
 
-#nav {
-    margin: 0;
+.ui-menu-color-contact {
+    background-color: #3498db;
 }
 
-#nav li {
-    font-size: 14px;
-    padding: 0;
+.ui-menu-color-download {
+    background-color: #d9a81d;
 }
 
-.menu-item {
-    height: 120px;
-    text-align: center;
-    padding: 0;
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
 }
 
-.menu-item a {
-    width: 100%;
-    text-decoration: none;
-    color: #fff;
-    height: 120px;
+.ui-menu-color-interests {
+    background-color: #e74c3c;
 }
 
-.menu-item a i {
-    padding: 22px;
-    display: block;
-    color: #fafafa;
-    font-size: 26px;
 
-}
 
-.menu-item span {
-    display: block;
-    width: 100%;
-    padding-top: 5px;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 14px;
+
+body {
+    font-family: Roboto, sans-serif;
     font-weight: 300;
-    letter-spacing: 2px;
+    background-color: #525252;
+    color: #555555;
 }
 
-/*-------------------------Special Styles*/
 
+/*--------------------------------------------Special Paddings/Margins/Text*/
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
+}
 
 .uppercase {
     text-transform: uppercase;
@@ -146,14 +93,9 @@ header {
     display: inline-block;
 }
 
+
 .row-table {
     display: table;
-}
-
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
 }
 
 .history-heading,
@@ -161,46 +103,123 @@ header {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
-    margin-bottom: 25px;
+    margin-bottom: 40px;
 }
 
 
+/*--------------------------------------------Heading*/
 
-/*-------------------------hover.css*/
+header {
+    margin: 0;
+}
+
+.heading {
+    margin-left: 50px;
+}
+
+.logo {
+    background: url("../images/rosie.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 360px;
+    transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+}
+
+.name {
+    font-family: "Exo", sans-serif;
+    font-weight: 100;
+    font-size: 46px;
+    margin-top: 50px;
+    color: #ffffff;
+}
+
+.title {
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-size: 28px;
+    margin-top: 20px;
+    margin-bottom: 90px;
+    color: #ffffff;
+}
+
+#nav {
+    margin: 0;
+}
+
+#nav li {
+    padding: 0;
+}
+
+.menuitem {
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #ffffff;
+    height: 120px;
+}
+
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
-    background-color: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
-
 }
 
-/*--------------------------footer*/
-footer {
 
+/*--------------------------------------------Footer*/
+
+footer {
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
     margin: 0;
 }
 
-.cv-pdf i {
-    font-size: 18px;
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
 
-.cv-pdf i:hover {
-    color: #e84610;
-}
-
 .social-links {
     padding-bottom: 15px;
-
 }
 
 .social-links li a i {
@@ -224,10 +243,11 @@ footer {
 }
 
 #footer-details {
-    padding: 20px;
+    margin: 20px;
 }
 
-/*----------------------------------three reasons*/
+/*--------------------------------------------Three Reasons*/
+
 .three-reasons-icon {
     font-size: 26px;
     color: #e67e22;
@@ -237,7 +257,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/*----------------------------------personal info*/
+/*--------------------------------------------Personal Info*/
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -248,7 +268,6 @@ footer {
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
-    display: inline-block;
 }
 
 .personal-info-item .key p,
@@ -257,9 +276,10 @@ footer {
 }
 
 .personal-info-item .key {
+    display: inline-block;
     width: 30%;
     margin-right: 21px;
-    margin-top: 2px;
+    padding-top: 2px;
     vertical-align: top;
 }
 
@@ -268,16 +288,16 @@ footer {
 }
 
 .personal-info-item .value {
+    display: inline-block;
     position: relative;
     width: 60%;
 }
 
-/*----------------------------------Skills*/
+/*--------------------------------------------Skills*/
 
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
 
 .progress-type {
@@ -286,18 +306,16 @@ footer {
     font-weight: 400;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
 }
+
 
 .progress-section {
     margin: 40px 20px;
 }
 
-/*----------------------------------Work history section*/
 
-.history-heading {
-    color: #fafafa;
-    margin: 50px;
-}
+/*--------------------------------------------Work History*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -311,70 +329,77 @@ footer {
     margin: 0;
 }
 
-.timeline-item:before {
+.timeline-item::before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
     top: 3em;
     display: block;
-    font-family: "EXO", sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
-    position: absolute;
     top: 2.4em;
+    position: absolute;
     left: -6px;
     border-radius: 12px;
-    content: "";
+    content: '';
     background: #fafafa;
+}
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
 }
 
 .history-items {
     margin-bottom: 30px;
 }
 
-
-/*-------------------------Contact form*/
+/*--------------------------------------------Contact*/
 
 .contact-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 20px;
-
 }
+
 
 .center-form {
     padding-top: 10px;
     margin: 0 auto;
     max-width: 70%;
-
 }
 
 button[type="submit"] {
     margin-top: 15px;
     margin-bottom: 20px;
-    color: #fafafa;
     background-color: #e84610;
+    color: #fafafa;
 }
 
-.textarea {
-    border: 2px inset #EBE9ED;
-    width: 100%;
-    max-width: 100%;
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
 }
 
-
-/*----------------------Media Queries */
+/*--------------------------------------------Media Queries*/
 
 @media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
         padding-top: 30px;
         min-height: 240px;
